# sonotui

./: .gitignore  CONTRIBUTING.md  README.md  go.mod  go.sum  main.go  sonotui-spec.md
.github/workflows/: release.yml
cmd/sonotui/: main.go
cmd/sonotuid/: main.go
cmd/sonotuid/web/: app.js  index.html  manifest.webmanifest  style.css
config/: config.go
docs/: api.md  config.md
internal/daemon/: api.go  events.go  fileserver.go  library.go  library_test.go  moods.go  sonos.go  spectrum.go  state.go
internal/tui/: art.go  client.go  keys.go  model.go  styles.go  tab_albums.go  tab_library.go  tab_nowplaying.go  tab_queue.go
scripts/: build-release.sh  install-tui.sh  install.sh
sonos/: discovery.go  events.go  info.go  rendering.go  soap.go  transport.go  types.go
tui/: art.go  keys.go  model.go  styles.go
tui-rs/: Cargo.toml
tui-rs/src/: app.rs  cache.rs  client.rs  config.rs  discover.rs  kitty.rs  main.rs  picker.rs  theme.rs
tui-rs/src/ui/: albums.rs  common.rs  library.rs  mod.rs  moods.rs  now_playing.rs  queue.rs
