[package]
name = "sonotui-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sonotui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
flate2 = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
unicode-width = "0.2"
mdns-sd = "0.19.0"
toml = "1.1.2"
dirs = "6.0.0"
